--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
     //修改生成的apk名字
     applicationVariants.all { variant ->
         variant.outputs.all {
+            println(IS_JENKINS+"===================")
 //            if (variant.buildType.name != "debug") {//防止AS无法安装debug包(apk)
             variant.getPackageApplication().outputDirectory = new File(project.rootDir.parentFile.absolutePath)
 //            }
