--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,39 +44,17 @@ android {
     //修改生成的apk名字
     applicationVariants.all { variant ->
         variant.outputs.all {
-            println(IS_JENKINS+"===================")
-//            if (variant.buildType.name != "debug") {//防止AS无法安装debug包(apk)
-            variant.getPackageApplication().outputDirectory = new File(project.rootDir.parentFile.absolutePath)
-//            }
-            outputFileName = new File("app-" +
-                    variant.flavorName + "-" +
-                    variant.buildType.name +
-                    ".apk")
+            if ("true" == IS_JENKINS) {
+                //指定安装包输出位置  /root/.jenkins/workspace/ 目录下
+                variant.getPackageApplication().outputDirectory = new File(project.rootDir.parentFile.absolutePath+"/"+BUILD_TIME)
+                outputFileName = new File("app-" +
+                        variant.flavorName + "-" +
+                        variant.buildType.name +
+                        ".apk")
+            }
         }
 
-//        variant.outputs.each { output ->
-//            def outDirectory
-//            outDirectory = '/usr/local/'
-//            def fileName = "app-${variant.productFlavors.name}-debug.apk"
-//            //这个修改输出的APK路径
-//            if (variant.buildType.name != "debug") {//防止AS无法安装debug包(apk)
-//                variant.getPackageApplication().outputDirectory = new File(outDirectory)
-//            }
-//            variant.getPackageApplication().outputScope.apkDatas.forEach { apkData ->
-//                //这个修改输出APK的文件名
-//                apkData.outputFileName = "app-" +
-//                        variant.flavorName + "-" +
-//                        variant.buildType.name +
-//                        ".apk"
-//            }
-//        }
     }
-    lintOptions {
-        abortOnError false
-        checkReleaseBuilds false
-    }
-
-
 }
 
 dependencies {
